# dynamic_mapping

./: README.md  accessPoint.sh  catkin_make.sh  dynamic_mapping_pc.sh  dynamic_mapping_pc.sh~  dynamic_mapping_robot.sh  exported_map.header  exported_map.ppm  mapping.sh  roboter  save_map.sh  start_controlling.sh  start_dynamic.sh  start_gmapping.sh  start_navigation.sh  start_rviz.sh
170114/: map4_8.ppm  map4_8.yaml  map4_9.ppm
AccessPoint/: hostapd.conf
amor-ros-pkg/: .hgignore  .hgtags  readRosBagScan.cpp
amor-ros-pkg/.hg/: dirstate  hgrc  undo.desc
amor-ros-pkg/ROSARIA/: CMakeLists.txt  RosAria.cpp
amor-ros-pkg/anaglyph/: CMakeLists.txt  anaglyph.cpp  mainpage.dox  manifest.xml
amor-ros-pkg/pyoj/: mainpage.dox  manifest.xml
dynamic_mapping/: CMakeLists.txt  package.xml
dynamic_mapping/include/: image_loader.h  mapping.h
dynamic_mapping/msg/: DynamicGrid.msg
dynamic_mapping/src/: main.cpp  map_export.cpp  map_import.cpp  transform_broadcaster.cpp
dynamic_mapping/srv/: ExportMap.srv  GetDynamicMap.srv
gmapping_openslam/: #HOWTO  #HOWTO~  Makefile  global.mk
gmapping_openslam/configfile/: configfile.d  configfile_test.d
gmapping_openslam/gridfastslam/: gfs2log.d  gfs2neff.d  gfs2rec.cpp  gfs2rec.d  gfsreader.d  gridslamprocessor.d  gridslamprocessor_tree.d  motionmodel.d
gmapping_openslam/gui/: gfs2img.d  gfs_nogui.d  gfs_simplegui.d  gsp_thread.d  moc_qgraphpainter.cpp  moc_qparticleviewer.cpp  qgraphpainter.d  qmappainter.d  qparticleviewer.d
gmapping_openslam/log/: carmenconfiguration.d  configuration.d  log_plot.d  log_test.d  rdk2carmen.d  scanstudio2carmen.d  sensorlog.d  sensorstream.d
gmapping_openslam/scanmatcher/: eig3.d  icptest.d  scanmatch_test.cpp  scanmatch_test.d  scanmatcher.cpp  scanmatcher.d  scanmatcher.h  scanmatcherprocessor.d  smmap.d
maps/: exported_map.header  exported_map.pgm  exported_map.ppm  exported_map.yaml  exported_map.yaml~  exported_map_0.pgm  exported_map_0.ppm  map  map.header  map.header~  map.pgm  map.ppm  navigation.rviz  smallMap.pgm  test_map.ppm
navigation-groovy-devel/: map.pgm  map.yaml  move_base.launch
p3at/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
p3at/src/: keyboard_control.cpp  safety.cpp  safety_navigation.cpp
rviz/: p3at.rviz  persistent_settings
rviz-groovy-devel/: CMakeLists.txt  package.xml  plugin_description.xml
(+114 files in other folders)
